fixed form input fields not showing correctly on screens larger than 360px but appearing correctly over 1100px, set texext input width to 100% for all screen sizes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -171,6 +171,7 @@ main {
     color: black;
     font-weight: 500;
     max-width: 100%;
+    flex-grow: 1;
 }
 
 .book-service {
@@ -194,11 +195,11 @@ main {
 
 
 .text-input {
-    color: white;
+    color: black;
     background: transparent;
     border: 2px solid black;
     border-radius: 5px;
-    width: 75%;
+    width: 100%;
     height: 20px;
     padding: 0 5px;
     margin: 1px 0 1px 0;
@@ -248,6 +249,8 @@ footer a {
 footer a i {
     margin-right: 8px;
 }
+
+
 
 /* Large or landscape phones (576px and up) */
 @media screen and (min-width: 576px) and (max-width: 766px) {
@@ -335,17 +338,7 @@ footer a i {
 
     /* booking section */ 
 
-    #booking-section {
-
-    }
     
-    #book-service {
-    
-    }
-
-    .text-input {
-        width: 100%;
-    }
 
     /* Footer */
     #footer {
